Fix comments routes
