# routes/index.js
@@ -8,7 +8,7 @@ router.get("/", (req, res) => {
 
 router.use("/blogs", require("./blogs"));
 router.use("/comments", require("./comments"));
-router.use("/itineraries", require("./itineraries"));
+
 
 
 
